* string.c: Fix document. Default value of the first   argument of `String#split` is not `$;` but `nil`.   When `nil` is passed as first argument, `$;` is used.   [ci skip] [Bug #11729] [ruby-dev:49378]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@53260 b2dd03c8-39d4-4d8f-98ff-823fe69b080e